# Beta-testing-app

./: .env.example  .gitignore  README.md
docs/: operations.md  (+5 more)
server/: Dockerfile  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 20260710_01_accounts.py  20260710_02_courses_comments.py  20260710_03_comment_location_contract.py  20260710_04_anchor_type_constraint.py  20260710_05_comment_author_role.py  20260710_06_attachments.py  20260710_07_comment_read_states.py  20260710_08_user_display_name.py  20260712_09_course_memberships.py  20260713_10_comment_delete_cascades.py  20260715_11_embedded_navigation.py  20260724_12_rise_interaction_context.py
server/app/: __init__.py  bootstrap.py  config.py  db.py  dependencies.py  main.py  models.py  schemas.py  security.py  url_validation.py
server/app/routers/: access.py  admin.py  attachments.py  auth.py  comments.py  courses.py  dashboard.py
server/app/services/: access.py  accounts.py  attachments.py  comments.py  courses.py  summary.py
server/app/static/: app.css  dashboard.js
server/tests/: conftest.py  test_accounts.py  test_admin_routes.py  test_anchor_type_schema.py  test_attachments.py  test_auth_routes.py  test_authorization.py  test_bootstrap.py  test_comment_creation.py  test_comment_status.py  test_comment_threads.py  test_comment_visibility.py  test_compose_config.py  test_course_access.py  test_course_comment_routes.py  test_course_identity.py  test_course_membership_models.py  test_course_summary.py  test_dashboard.py  test_dashboard_accessibility.py  test_health.py
(+168 files in other folders)
