[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moodle-course-review"
version = "0.1.0"
description = "Private Moodle course review service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic-settings>=2.6,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "sqlalchemy>=2.0,<3.0",
    "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "pytest>=8.3,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.exceptions.StarletteDeprecationWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
